# agent-jarvis

./: .gitignore  README.md  TODO.md  agent.py  agents.md  architecture.md  pyproject.toml  run.md  skill.md.tmpl
config/: settings.py
memory/: store.py
permission/: permission.py
provider/: ollama.py
session/: event.py  session.py  system.py
skills/: interpret-north-star.md  write-acceptance-criteria.md  write-tech-spec.md
tests/: test_permission.py  test_scrape_tool.py  test_stdio_server.py  test_system_prompt.py
tool/: registry.py
tool/scripts/: architecture.md  roadmap.md  scrape.py
tool/sse/: architecture.md  client.py  roadmap.md
tool/stdio/: architecture.md  client.py  roadmap.md  server.py
util/: tracing.py
