[project]
name = "harness"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.2",
    "arize-phoenix>=17.0.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "openinference-semantic-conventions>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
